# FairVote

./: .gitmodules  Cargo.toml  LICENSE  README.md
board/: docker-compose.yml  monitor.py
clerk/: Cargo.toml  pubset.key
clerk/src/: decrypt.rs  main.rs
client/: .gitattributes  .gitignore  demo_test.ipynb  main.py  requirements.txt
client/encrypt/: Cargo.toml
client/encrypt/src/: lib.rs  main.rs
gen_key/: Cargo.toml
gen_key/src/: main.rs
server/: .gitignore  Cargo.toml
server/migrations/2020-03-30-152351_create_users/: up.sql
server/src/: auth_handler.rs  ballot.rs  errors.rs  keys.rs  main.rs  models.rs  register_handler.rs  schema.rs  sign.rs  signature.rs  utils.rs
