[package]
name = "clerk"
version = "0.1.0"
authors = ["ZickShen <zick-hd@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = { version = "0.2", features = ["macros"] }
table-extract = "0.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
prettytable-rs = "^0.8"