[package]
name = "clerk"
version = "0.1.0"
authors = ["ZickShen <zick-hd@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = { version = "0.2", features = ["macros"] }
table-extract = "0.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
prettytable-rs = "^0.8"
pbs_rsa = { path = "../pbs_rsa" }
num-bigint-dig = { version = "0.6", features = ["rand", "i128", "u64_digit", "prime", "zeroize"] }
threshold_crypto = { version = "0.3", git = "https://github.com/poanetwork/threshold_crypto" }
num-traits = "0.2.11"
lazy_static = "1.3.0"
dotenv = "0.10"