[package]
name = "gen_key"
version = "0.1.0"
authors = ["ZickShen <zick-hd@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threshold_crypto = { version = "0.3", git = "https://github.com/poanetwork/threshold_crypto" }
serde_json = "1.0"
rand = "0.7.3"
lazy_static = "1.3.0"
dotenv = "0.10"