[package]
name = "server"
version = "0.1.0"
authors = ["zickshen <zick-hd@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint-dig = { version = "0.6", features = ["rand", "i128", "u64_digit", "prime", "zeroize"] }
num-traits = "0.2.11"
num-integer = "0.1.42"
num-iter = "0.1.40"
actix-identity = "0.1.0"
actix-web = "1.0.8"
actix-cors = "0.1.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.0", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.10"
r2d2 = "0.8"
env_logger = "0.6"
derive_more = "0.15.0"
lazy_static = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
easy_password  = "0.1.2"
pbs_rsa = { path = "../pbs_rsa" }
rand = "0.7.3"