[package]
name = "encrypt"
version = "0.1.0"
authors = ["ZickShen <zick-hd@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threshold_crypto = { version = "0.3", git = "https://github.com/poanetwork/threshold_crypto" }
serde_json = "1.0"
